fixed problem with the slider on small screens

--- a/src/components/ProductImageSlider/ProductImageSlider.css
+++ b/src/components/ProductImageSlider/ProductImageSlider.css
@@ -23,7 +23,7 @@
 
 .ImgWrapper #arrow-left .fa-chevron-circle-left,
 .ImgWrapper #arrow-right .fa-chevron-circle-right {
-	color: #333;
+	color: rgb(44, 44, 44);
 	width: 32px;
 	height: 32px;
 	border-radius: 32px;
@@ -34,7 +34,7 @@
 .ImgWrapper #arrow-right .fa-chevron-circle-right:hover {
 	opacity: 1;
 	color: rgb(224, 224, 224);
-	background-color: #333;
+	background-color: rgb(44, 44, 44);
 	width: 32px;
 	height: 32px;
 	border-radius: 32px;
